data/all_generated_tests/raw_wast_tests/br_StackCorruption_164.wast
;; 5. **Test Description:**    Use a `br` instruction within a `block` that contains multiple `if` statements, targeting a label after the block.    **Constraint Checked:** Correct stack unwinding through nested control flow and restoration after `if` blocks.    **Relation to Stack Corruption:** Errors during complex flow unwinding could lead to stack corruption due to underflow or overflow.

(assert_invalid
  (module
    (func $complex_unwind
      (block 
        (if (i32.const 1)
          (then
            (if (i32.const 0)
              (then (br 1))
            )
          )
        )
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)